src/test/ui/rfc1445/match-forbidden-without-eq.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-forbidden-without-eq.rs:13:9
   |
LL |         FOO => { }
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-forbidden-without-eq.rs:21:9
   |
LL |         f32::INFINITY => { }
   |         ^^^^^^^^^^^^^

error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-forbidden-without-eq.rs:13:9
   |
LL |         FOO => { }
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-forbidden-without-eq.rs:21:9
   |
LL |         f32::INFINITY => { }
   |         ^^^^^^^^^^^^^

error: aborting due to 4 previous errors

